--- a/SW_Projects/base/examples/AL_Operations/platformio.ini
+++ b/SW_Projects/base/examples/AL_Operations/platformio.ini
@@ -16,6 +16,6 @@ monitor_speed = 115200
 
 #debug_tool = whisper
 
-#board_build.bitstream_file = home/RvfpgaSoC/BlockDesign/src/rvfpga.bit
+#board_build.bitstream_file = home/rui/MSc_Dissertation/SoC/base/project/project.runs/impl_1/rvfpga.bit
 
-board_debug.verilator.binary = home/RvfpgaSoC/BlockDesign/src/verilatorSIM/Vrvfpgasim.exe
+board_debug.verilator.binary = /home/rui/MSc_Dissertation/SW_Projects/base/SoC/verilatorSIM/Vrvfpgasim
