--- a/SW/LedsSwitches/platformio.ini
+++ b/SW/LedsSwitches/platformio.ini
@@ -17,7 +17,7 @@ monitor_speed = 115200
 
 ; debug_tool = whisper
 
-; board_build.bitstream_file = /home/rui/MSc_Dissertation/SoC/RVfpgaCopy/RVfpgaNexys_System/RVfpgaNexys_System.runs/impl_1/rvfpganexys.bit
-board_build.bitstream_file = C:\Users\Rui\Rui\MSc_Dissertation\SW\rvfpganexys.bit
+board_build.bitstream_file = /home/rui/MSc_Dissertation/SW/rvfpganexys.bit
+; board_build.bitstream_file = C:\Users\Rui\Rui\MSc_Dissertation\SW\rvfpganexys.bit
 
 ; board_debug.verilator.binary = C:\Users\Rui\Rui\MSc_Dissertation\SW\Vrvfpgasim.exe
